--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<title>Avishay Bar | Cloud Security</title>
+	<title>Yogev Hen | Cloud Architect</title>
 
 	<link rel="icon" href="favicon.ico" type="image/png" />
 
