--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
 		<div class="tagline">Cloud Solution Architect | DevOps Engineer | Full-Stack Developer</div>
 		<!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
 		<div class="icons-social">
-			<a target="_blank" href="https://github.com/yogevhen"><i class="fab fa-github"></i></a>
+            <a target="_blank" href="https://github.com/yogevhen"><i class="fab fa-github"></i></a>
+            <a target="_blank" href="https://medium.com/@yogevhen"><i class="fab fa-medium"></i></a>
     </div>
 	</main>
 </body>
